refactor: refactor code order report